<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.activity.UserInfoActivity">

    <item
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom"
        android:onClick="onRefreshClicked" />

    <item
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_applications_white_24dp"
        app:showAsAction="ifRoom"
        android:onClick="onSettingsClicked" />

    <item
        android:title="@string/exit"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="always"
        android:onClick="onExitClicked" />
</menu>